k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: superapp-web-service
      port:
        number: 3000
  tls:
  - hosts:
    - linux-vm-southeastasia-2.southeastasia.cloudapp.azure.com
    secretName: linux-vm-southeastasia-2-tls
  rules:
  - host: linux-vm-southeastasia-2.southeastasia.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: superapp-web-service
            port:
              number: 3000
